# clinicassist

./: README.md  prompts.py  pyproject.toml  test.ipynb  utils.py
frontend/: README_SETUP.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ProgressBar.tsx  Sidebar.tsx
frontend/src/types/: api.ts
src/: .env.template  main.py  models.py  prompts.py  test.ipynb  utils.py
src/llm_orchestration/: clinical_assistant_graph.py  llm.py  part1_patient_demo.py  part2_symptom_collect.py  part3_medhist_collect.py  part4_triaging.py
