[project]
name = "clinicassist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "langgraph-checkpoint-postgres>=3.0.0",
    "pip>=25.2",
    "psycopg-pool>=3.2.7",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.0",
    "uvicorn>=0.37.0",
]
